--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "@nuxtjs/apollo": "^5.0.0-alpha.11",
+    "@nuxtjs/plausible": "^1.0.0",
     "@pinia/nuxt": "^0.5.1",
     "nuxt": "^3.12.2",
+    "plausible-tracker": "^0.3.9",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
